--- a/localdishes.htm
+++ b/localdishes.htm
@@ -1,41 +1,82 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <center>
-<table style="border: 1px solid black">
-  <tr style="border: 1px solid black">
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="home.htm">Home</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="localdishes.htm"><font size="6">Local Dishes</font></a></th> 
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="historicalplaces.htm">Historical Places</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="usefullinks.htm">Useful Links</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="aboutme.htm">About Me</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="contactme.htm">Contact Me</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="registration.htm">Registraiton</a></th>
-  </tr>
-</table>
-<h1> Local Dishes </h1>
-<h1>Meftune</h1>
-<img src="meftune.jpg" width="500px">
-<p> 
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+   <link rel="stylesheet" type="text/css" href="css/mystyle.css"/>
+    <title>Diyarbakir</title>
+  </head>
+  <body>  
+      <div class="container" > 
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#"></a>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="home.htm">Home</a>
+      </li>
+       <li class="nav-item active">
+        <a class="nav-link" href="localdishes.htm">Local Dishes <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="historicalplaces.htm">Historical Places</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="usefullinks.htm">Useful Links</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="aboutme.htm">About me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contactme.htm">Contact me</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="registration.htm">Registiration</a>
+      </li>
+    </ul>
+    
+  </div>
+</nav>
+<div class="icerik col-lg-12 col-md-12 col-sm-12 col-xs-12" > 
+ <h1> Local Dishes </h1>
+    <img class="img-responsive" src="./img/meftune.jpg" alt="1"/>
+    <h2>Meftune</h2><p> 
 The most famous specialty dish from Diyarbakir is Meftune which is made up of lamb meat and vegetable laced with garlic and sumac. 
 </p>
 
-<h1>Kaburga Dolmasi</h1>
-<img src="kaburgadolmasi.jpg" width="500px">
+
+          <img class="img-responsive" src="./img/kaburgadolmasi.jpg" alt="1"/>
+ <h2>Kaburga Dolmasi</h2>
 <p> 
 Another known dish is Kaburga Dolması which is a baked lamb's ribs stuffed with rice and many spices 
 </p>
 
-<h1>Ciger Sis</h1>
-<img src="cigersis.jpg" width="500px">
 
-<h1>Diyarbakir Karpuzu</h1>
-<img src="diyarbakirkarpuzu.jpg" width="400px">
+
+      <img class="img-responsive" src="./img/cigersis.jpg" alt="1"/>
+<h2>Ciger Sis</h2>
+
+      <img class="diyarbakirkarpuzu" src="./img/diyarbakirkarpuzu.jpg" alt="1"/>
+    <h2>Diyarbakir Karpuzu</h2>
 <br>
 <p>
 Diyarbakır is also famous for its watermelons which are exported internationally; one of the largest events in the city is the annually held Watermelon Festival.
 </p>
+</div>
 
-    </center>
+    <!-- bootsrap libraries -->
+     <script src="js/jquery-3.1.1.min.js"></script> 
+     <script src="js/bootstrap.min.js"></script> 
+
+   </div> 
 </body>
 </html>
