--- a/contactme.htm
+++ b/contactme.htm
@@ -1,21 +1,63 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css"/>
+   
+    <title>Diyarbakir</title>
+  </head>
 <body>
-  <center>
-<table style="border: 1px solid black">
-  <tr style="border: 1px solid black">
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="home.htm">Home</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="localdishes.htm">Local Dishes</a></th> 
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="historicalplaces.htm">Historical Places</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="usefullinks.htm">Useful Links</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="aboutme.htm">About Me</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="contactme.htm"><font size="6">Contact Me</font></a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="registration.htm">Registraiton</a></th>
-  </tr>
-</table>
+    <div class="container">
+    <!-- Navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#"></a>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="home.htm">Home</a>
+      </li>
+       <li class="nav-item ">
+        <a class="nav-link" href="localdishes.htm">Local Dishes </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="historicalplaces.htm">Historical Places</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="usefullinks.htm">Useful Links</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="aboutme.htm">About me</a>
+      </li>
+       <li class="nav-item active">
+        <a class="nav-link" href="contactme.htm">Contact me <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="registration.htm">Registiration</a>
+      </li>
+    </ul>
+    
+  </div>
+</nav>
+          <div class="icerik col-lg-12 col-md-12 col-sm-12 col-xs-12" > 
 <h1> Contactme </h1>
+    
   <p>If you want to contact me, please click below: <a href="mailto:hfa@anadolu.edu.tr">hfa@anadolu.edu.tr</a></p>
-  <a href="home.htm"><img src="homebutton.png" alt="Home" width="50px" height="50px"></a>
-    </center>
+  <a href="home.htm">
+        <img class="homebutton" src="./img/homebutton.png" width="15%" alt="1"/>
+        </a> 
+        </div>
+<!-- bootsrap libraries -->
+     <script src="js/jquery-3.1.1.min.js"></script> 
+     <script src="js/bootstrap.min.js"></script> 
+        </div>
 </body>
 </html>
