--- a/home.htm
+++ b/home.htm
@@ -1,18 +1,54 @@
-<!DOCTYPE html>
-<html>
-<body>
-  <center>
-<table style="border: 1px solid black">
-  <tr style="border: 1px solid black">
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="home.htm"><font size="6">Home</font></a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="localdishes.htm">Local Dishes</a></th> 
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="historicalplaces.htm">Historical Places</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="usefullinks.htm">Useful Links</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="aboutme.htm">About Me</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="contactme.htm">Contact Me</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="registration.htm">Registraiton</a></th>
-  </tr>
-</table>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css"/>
+      <title>Diyarbakir</title>
+    </head>
+    <body>
+    <div class="container">    
+        
+<!-- Navbar -->
+     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      	 <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#"></a>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                  <ul class="navbar-nav mr-auto">
+                     <li class="nav-item">
+                        <a class="nav-link active" href="home.htm">Home<span class="sr-only">(current)</span></a>
+                     </li>
+                     <li class="nav-item ">
+                        <a class="nav-link" href="localdishes.htm">Local Dishes </a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="historicalplaces.htm">Historical Places</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="usefullinks.htm">Useful Links</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="aboutme.htm">About me</a>
+                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="contactme.htm">Contact me</a>
+                     </li>
+                     <li class="nav-item ">
+                        <a class="nav-link" href="registration.htm">Registiration </a>
+                     </li>
+                  </ul>
+               </div>
+     </nav>
+        <div class="icerik col-lg-12 col-md-12 col-sm-12 col-xs-12" > 
+ 
+
 <h1> DIYARBAKIR </h1>
 <p>   The earliest reference to the city comes from Assyrian records which identify it as being the capital of the Aramean kingdom of Bit-Zamani (ca. 1300 BC). In the ninth century BC, the city joined a rebellion against the Assyrian king Shalmaneser III. The city was later reduced to being a province of the Neo-Assyrian Empire.
 
@@ -29,7 +65,13 @@ rose in the Sheikh Said rebellion against the newly established secular governme
 Republic of Turkey with the aim to revive the Islamic caliphate and sultanate, but were 
 defeated by Turkish forces.
 </p>
-<img src="diyarbakir.jpg" width="500px">
-    </center>
+       
+<figure>
+  <img class="img-responsive" src="./img/diyarbakir.jpg" alt="1" width="100%"/>
+    </figure>
+        </div>
+   <script src="js/jquery-3.1.1.min.js"></script> 
+     <script src="js/bootstrap.min.js"></script> 
+</div>
 </body>
 </html>
