--- a/registration.htm
+++ b/registration.htm
@@ -1,21 +1,59 @@
-<!DOCTYPE html>
-<html>
-<body>
-<center>
-<table style="border: 1px solid black">
-  <tr style="border: 1px solid black">
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="home.htm">Home</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="localdishes.htm">Local Dishes</a></th> 
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="historicalplaces.htm">Historical Places</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="usefullinks.htm">Useful Links</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="aboutme.htm">About Me</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="contactme.htm">Contact Me</a></th>
-    <th style="border: 1px solid black; padding: 5px 15px;"><a href="registration.htm"><font size="6">Registraiton</font></a></th>
-  </tr>
-  </table>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css"/>
+    <title>Diyarbakir</title>
+  </head>
+  <body>
+      <div class="container">
+ <!-- Navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+                    <a class="navbar-brand" href="#"></a>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+               <ul class="navbar-nav mr-auto">
+                  <li class="nav-item">
+                     <a class="nav-link" href="home.htm">Home</a>
+                  </li>
+                  <li class="nav-item ">
+                     <a class="nav-link" href="localdishes.htm">Local Dishes </a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="historicalplaces.htm">Historical Places</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="usefullinks.htm">Useful Links</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="aboutme.htm">About me</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="contactme.htm">Contact me</a>
+                  </li>
+                  <li class="nav-item active">
+                     <a class="nav-link" href="registration.htm">Registiration <span class="sr-only">(current)</span></a>
+                  </li>
+               </ul>
+            </div>
+  </nav>
+          <div class="icerik col-lg-12 col-md-12 col-sm-12 col-xs-12" > 
+ <!-- bootsrap libraries -->
+   
+ <br>
+
  <br>
    <h1> Registraiton </h1>
- <form action="action_page.php" method='POST'>
+ <form action="thx.htm">
   Name:<br>
  <input type="text" name="name"><br>
   Surname:<br>
@@ -46,6 +84,10 @@
    
    
 </form>
-</center>
+          </div>
+      <!-- bootsrap libraries -->
+     <script src="js/jquery-3.1.1.min.js"></script> 
+     <script src="js/bootstrap.min.js"></script> 
+</div>
 </body>
 </html>
